--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -53,7 +53,8 @@
         "_close_toast": "Close"
     },
     "CATEGORIES_FILTER": {
-        "_remove_badge": "Remove badge"
+        "_remove_badge": "Remove badge",
+        "_applied_filters": "Filtros aplicados:"
     },
     "FOOTER": {
         "_about": "About",
@@ -78,4 +79,4 @@
         "_cart": "My shopping cart",
         "_sign_out": "Sign out"
     }
-} 
+}
