--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -66,6 +66,43 @@
             "_desc": "Navigate with confidence trough transparent practices in service provisioning, pricing and operations."
         }
     },
+    "HOWITWORKS":{
+        "_title": "How It Works",
+        "_subtitle": "Discover how the DOME Marketplace connects you to Europe's finest cloud and edge services",
+        "CUSTOMERS":{
+            "_title": "For customers",
+            "_subtitle": "Discover and Deploy",
+            "_search_title": "Search and Explore",
+            "_search_desc": "Use our intuitive search to find the services that match your digital transformation needs.",
+            "_compare_title": "Compare and Decide",
+            "_compare_desc": "Evaluate services based on features, compliance and reviews to make informed choices.",
+            "_seamless_title": "Seamless Integration",
+            "_seamless_desc": "Follow our easy process to integrate and deploy your chosen services swiftly.",
+            "_join": "Join as customer"
+        },
+        "PROVIDERS": {
+            "_title": "For providers",
+            "_subtitle": "Connect and Grow",
+            "_register_title": "Register Your Service",
+            "_register_desc": "Sign up and submit your service for validation, ensuring compliance and quality.",
+            "_verified_title": "Get verified",
+            "_verified_desc": "Our team will quickly verify your offerings to ensure they meet DOME standards.",
+            "_reach_title": "Reach Europe",
+            "_reach_desc": "Once verified, your services will be accessible to a wide European audience, ready to grow your business.",
+            "_join": "Join as provider"
+        }
+    },
+    "EXPLORE": {
+        "_title": "Explore DOME",
+        "_subtitle": "Whether you're seeking in-depth reports, latest updates or upcoming events, everything ou need to know is just a click away.",
+        "_events_title": "Events and Webinars",
+        "_events_desc": "Join us at our next event or webinar to connect with fellow innovators, learn from industry leaders and discover new opportunities within the DOME ecosystem.",
+        "_updates_title": "Latest Updates and News",
+        "_updates_desc": "Stay informed with the latest developments, service enhancements and industry insights directly from the DOME website.",
+        "_resources_title": "Resources & Reports",
+        "_resources_desc": "Access our library of resources, detailed reports and case studies to gain a deep understanding of the cloud and edge market landscape and DOME's impact.",
+        "_go": "Go to DOME's Site"
+    },
     "CARD": {
         "_details": "View details",
         "_add_cart": "Add to cart",
