ADD BillingAccounts on pay form + FIX tabs show selected

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -121,7 +121,13 @@
         "_undo": "Undo",
         "_close_toast": "Close",
         "_from": "From",
-        "_full_desc": "Full description"
+        "_full_desc": "Full description",
+        "_price_plans": "Price plans",
+        "_select_price": "Select price plan",
+        "_chars": "Characteristics",
+        "_select_char": "Select characteristics",
+        "_terms": "Terms and conditions",
+        "_accept_terms": "I have read and I accept the terms and conditions."
     },
     "CATEGORIES_FILTER": {
         "_remove_badge": "Remove badge",
@@ -183,6 +189,11 @@
         "_confirm": "Confirm and pay",
         "_note": "Add notes",
         "_choose_bill": "Choose a billing address",
-        "_cart": "Cart"
+        "_cart": "Cart",
+        "_email": "Email",
+        "_postalAddress": "Postal address",
+        "_phone": "Phone number",
+        "_billing_check": "You should first create at least a billing address in order to checkout an order.",
+        "_click_here": "Click here"
     }
 }
