ADD inventory and order list + FIX partyId refresh + blur card background + reestructure services

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -162,7 +162,8 @@
         "_profile": "Profile",
         "_offerings": "My Offerings",
         "_cart": "My shopping cart",
-        "_sign_out": "Sign out"
+        "_sign_out": "Sign out",
+        "_inventory": "My inventory"
     },
     "PRODUCT_DETAILS": {
         "_back": "Back",
