--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -189,7 +189,9 @@
     "SHOPPING_CART": {
         "_buy": "Buy",
         "_back": "Back",
+        "_billingAddress": "Billing Address",
         "_confirm": "Confirm and pay",
+        "_checkout": "Checkout",
         "_note": "Add notes",
         "_choose_bill": "Choose a billing address",
         "_cart": "Cart",
