--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,5 +1,5 @@
 {
-    "_yes": "Yes",
+    "_yes": "Sí",
     "_no": "No",
     "DASHBOARD": {
         "_title": "DOME MARKETPLACE is out! See what's new",
@@ -189,7 +189,7 @@
     "SHOPPING_CART": {
         "_buy": "Buy",
         "_back": "Back",
-        "_billingAddress": "Dirección de Facturación",
+        "_billingAddress": "Billing Address",
         "_confirm": "Confirm and pay",
         "_checkout": "Checkout",
         "_note": "Add notes",
@@ -220,7 +220,8 @@
         "_birthdate": "Birthdate",
         "_date": "Date",
         "_country": "Country",
-        "_city": "City"
+        "_city": "City",
+        "_mybills": "My billing addresses"
     },
     "PRODUCT_INVENTORY":{
         "_loading": "Loading...",
@@ -234,5 +235,24 @@
         "_priority": "Priority",
         "_desc": "Description",
         "_price": "Price"
+    },
+    "BILLING": {
+        "_title": "Title",
+        "_email": "Email",
+        "_postalAddress": "Postal address",
+        "_phone": "Phone number",
+        "_phone_type": "Phone Type",
+        "_action": "Actions",
+        "_country": "Country",
+        "_city": "City",
+        "_state": "State / Province",
+        "_post_code": "ZIP / Postal Code",
+        "_street": "Street Address",
+        "_add": "Add billing address",
+        "_edit": "Edit billing address",
+        "_update": "Update billing address",
+        "_delete": "Delete billing address",
+        "_confirm_delete": "Are you sure about deleting the following billing address?",
+        "_cancel": "Cancel"
     }
 }
