--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -253,6 +253,7 @@
         "_update": "Update billing address",
         "_delete": "Delete billing address",
         "_confirm_delete": "Are you sure about deleting the following billing address?",
-        "_cancel": "Cancel"
+        "_cancel": "Cancel",
+        "_invalid_phone": "Phonenumber is invalid!"
     }
 }
