--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,5 +1,5 @@
 {
-    "_yes": "Sí",
+    "_yes": "Yes",
     "_no": "No",
     "DASHBOARD": {
         "_title": "DOME MARKETPLACE is out! See what's new",
@@ -253,6 +253,7 @@
         "_update": "Update billing address",
         "_delete": "Delete billing address",
         "_confirm_delete": "Are you sure about deleting the following billing address?",
-        "_cancel": "Cancel"
+        "_cancel": "Cancel",
+        "_invalid_phone": "Phonenumber is invalid!"
     }
 }
