--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -205,6 +205,7 @@
         "_general": "General",
         "_bill": "Billing addresses",
         "_orders": "Orders",
+        "_order_list": "My order list",
         "_update": "Update",
         "_account": "Account",
         "_username": "Username",
