--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -266,5 +266,122 @@
         "_cancel": "No, cancel",
         "_invalid_phone": "Phonenumber is invalid!",
         "_invalid_email": "Email is invalid!"
+    },
+    "CREATE_PROD_SPEC":{
+        "_back": "Back",
+        "_create": "Create product specification",
+        "_new": "New product",
+        "_steps": "Steps",
+        "_general": "General",
+        "_general_info": "Product's general information",
+        "_bundle": "Bundle",
+        "_bundle_info": "Product's blundle information",
+        "_comp_profile": "Compliance profile",
+        "_comp_profile_info": "Product's compliance profile",
+        "_chars": "Characteristics",
+        "_chars_info": "Product's characteristics",
+        "_resource": "Resource Specs",
+        "_resource_info": "Product's resource specifications",
+        "_service": "Service Specs",
+        "_service_info": "Product's service specifications",
+        "_attachments": "Attachments",
+        "_attachments_info": "Product's attachments",
+        "_relationships": "Relationships",
+        "_relationships_info": "Product's relationships",
+        "_product_name": "Name",
+        "_product_version": "Version",
+        "_product_brand": "Brand",
+        "_id_number": "ID Number",
+        "_product_description": "Description",
+        "_preview": "Preview",
+        "_show_preview": "Show preview",
+        "_next": "Next",
+        "_is_bundled": "Bundled product?",
+        "_status": "Status",
+        "_type": "Type",
+        "_last_update": "Last update",
+        "_select": "Select",
+        "_simple": "Simple",
+        "_load_more": "Load more",
+        "_add_comp": "Add Compliance profile",
+        "_value": "Value",
+        "_actions": "Actions",
+        "_no_chars": "No characteristics included.",
+        "_values": "Values",
+        "_new_char": "Create new characteristic",
+        "_add_values": "Add values",
+        "_unit": "Unit",
+        "_from": "From",
+        "_to": "To",
+        "_save_char": "Save characteristic",
+        "_resource_specs": "Resource specifications",
+        "_service_specs": "Service specifications",
+        "_add_prod_img": "Add product image",
+        "_drop_files": "Drop files to attatch or",
+        "_select_files": "select a file.",
+        "_add_prod_img_url": "Add product image using URL",
+        "_add_att": "Add attachments",
+        "_no_att": "No attachments included.",
+        "_new_att": "Add new attachment",
+        "_save_att": "Save attachment",
+        "_no_relatioships": "No relationships included.",
+        "_relationship_type": "Relationship type",
+        "_add_relationship": "Add new relationship",
+        "_save_relationship": "Save relationship",
+        "_finish": "Finish"
+    },
+    "CREATE_RES_SPEC": {
+        "_back": "Back",
+        "_create": "Create resource specification",
+        "_new": "New resource",
+        "_steps": "Steps",
+        "_general": "General",
+        "_general_info": "Resource's general information",
+        "_chars": "Characteristics",
+        "_chars_info": "Resource's characteristics",
+        "_value": "Value",
+        "_actions": "Actions",
+        "_no_chars": "No characteristics included.",
+        "_values": "Values",
+        "_new_char": "Create new characteristic",
+        "_add_values": "Add values",
+        "_unit": "Unit",
+        "_from": "From",
+        "_to": "To",
+        "_type": "Type",
+        "_save_char": "Save characteristic",
+        "_preview": "Preview",
+        "_show_preview": "Show preview",
+        "_name": "Name",
+        "_description": "Description",
+        "_next": "Next",
+        "_finish": "Finish"
+    },
+    "CREATE_SERV_SPEC": {
+        "_back": "Back",
+        "_create": "Create service specification",
+        "_new": "New service",
+        "_steps": "Steps",
+        "_general": "General",
+        "_general_info": "Service's general information",
+        "_chars": "Characteristics",
+        "_chars_info": "Service's characteristics",
+        "_value": "Value",
+        "_actions": "Actions",
+        "_no_chars": "No characteristics included.",
+        "_values": "Values",
+        "_new_char": "Create new characteristic",
+        "_add_values": "Add values",
+        "_unit": "Unit",
+        "_from": "From",
+        "_to": "To",
+        "_type": "Type",
+        "_save_char": "Save characteristic",
+        "_preview": "Preview",
+        "_show_preview": "Show preview",
+        "_name": "Name",
+        "_description": "Description",
+        "_next": "Next",
+        "_finish": "Finish"
     }
 }
