ADD internationalization to my oferings

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -388,5 +388,40 @@
         "_next": "Next",
         "_finish": "Finish",
         "_create_serv": "Create service"
+    },
+    "OFFERINGS": {
+        "_catalogs": "Catalogs",
+        "_offers": "Offer",
+        "_prod_spec": "Product Specifications",
+        "_serv_spec": "Service Specifications",
+        "_res_spec": "Resource Specifications",
+        "_search": "Search",
+        "_add_new_serv": "Add new service specification",
+        "_filter_state": "Filter by state",
+        "_state": "State",
+        "_order_by": "Order by...",
+        "_last_update": "Last update",
+        "_name": "Name",
+        "_active": "Active",
+        "_launched": "Launched",
+        "_retired": "Retired",
+        "_obsolete": "Obsolete",
+        "_status": "Status",
+        "_actions": "Actions",
+        "_load_more": "Load more",
+        "_add_new_res": "Add new resource specification",
+        "_add_new_prod": "Add new product specification",
+        "_filter_type": "Filter by type",
+        "_all": "All",
+        "_simple": "Simple",
+        "_bundle": "Bundle",
+        "_type": "Type",
+        "_prod_offer": "Product offer",
+        "_add_new_offer": "Add new product offer",
+        "_add_new_catalog": "Add new catalog",
+        "_filter_role": "Filter by role",
+        "_seller": "Seller",
+        "_owner": "Owner",
+        "_role": "Role"
     }
 }
