--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -388,5 +388,26 @@
         "_next": "Next",
         "_finish": "Finish",
         "_create_serv": "Create service"
+    },
+    "OFFERINGS": {
+        "_catalogs": "Catalogs",
+        "_offers": "Offer",
+        "_prod_spec": "Product Specifications",
+        "_serv_spec": "Service Specifications",
+        "_res_spec": "Resource Specifications",
+        "_search": "Search",
+        "_add_new_serv": "Add new service specification",
+        "_filter_state": "Filter by state",
+        "_state": "State",
+        "_order_by": "Order by...",
+        "_last_update": "Last update",
+        "_name": "Name",
+        "_active": "Active",
+        "_launched": "Launched",
+        "_retired": "Retired",
+        "_obsolete": "Obsolete",
+        "_status": "Status",
+        "_actions": "Actions",
+        "_load_more": "Load more"
     }
 }
