ADD service update form + ADD resource update form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -429,6 +429,35 @@
         "_finish": "Finish",
         "_create_res": "Create resource"
     },
+    "UPDATE_RES_SPEC": {
+        "_back": "Back",
+        "_status": "Status",
+        "_update": "Update resource specification",
+        "_new": "New resource",
+        "_steps": "Steps",
+        "_general": "General",
+        "_general_info": "Resource's general information",
+        "_chars": "Characteristics",
+        "_chars_info": "Resource's characteristics",
+        "_value": "Value",
+        "_actions": "Actions",
+        "_no_chars": "No characteristics included.",
+        "_values": "Values",
+        "_new_char": "Create new characteristic",
+        "_add_values": "Add values",
+        "_unit": "Unit",
+        "_from": "From",
+        "_to": "To",
+        "_type": "Type",
+        "_save_char": "Save characteristic",
+        "_preview": "Preview",
+        "_show_preview": "Show preview",
+        "_name": "Name",
+        "_description": "Description",
+        "_next": "Next",
+        "_finish": "Finish",
+        "_update_res": "Update resource"
+    },
     "CREATE_SERV_SPEC": {
         "_back": "Back",
         "_create": "Create service specification",
@@ -456,6 +485,35 @@
         "_next": "Next",
         "_finish": "Finish",
         "_create_serv": "Create service"
+    },
+    "UPDATE_SERV_SPEC": {
+        "_back": "Back",
+        "_status": "Status",
+        "_update": "Update service specification",
+        "_new": "New service",
+        "_steps": "Steps",
+        "_general": "General",
+        "_general_info": "Service's general information",
+        "_chars": "Characteristics",
+        "_chars_info": "Service's characteristics",
+        "_value": "Value",
+        "_actions": "Actions",
+        "_no_chars": "No characteristics included.",
+        "_values": "Values",
+        "_new_char": "Create new characteristic",
+        "_add_values": "Add values",
+        "_unit": "Unit",
+        "_from": "From",
+        "_to": "To",
+        "_type": "Type",
+        "_save_char": "Save characteristic",
+        "_preview": "Preview",
+        "_show_preview": "Show preview",
+        "_name": "Name",
+        "_description": "Description",
+        "_next": "Next",
+        "_finish": "Finish",
+        "_update_serv": "Update service"
     },
     "CREATE_OFFER":{
         "_back": "Back",
