ADD disable update button if needed + fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -71,7 +71,7 @@
         "_subtitle": "Discover how the DOME Marketplace connects you to Europe's finest cloud and edge services",
         "CUSTOMERS":{
             "_title": "For customers",
-            "_subtitle": "Discover and Deploy",
+            "_subtitle": "Discover and Purchase",
             "_search_title": "Search and Explore",
             "_search_desc": "Use our intuitive search to find the services that match your digital transformation needs.",
             "_compare_title": "Compare and Decide",
