--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -267,6 +267,42 @@
         "_invalid_phone": "Phonenumber is invalid!",
         "_invalid_email": "Email is invalid!"
     },
+    "CREATE_CATALOG": {
+        "_back": "Back",
+        "_create": "Create catalog",
+        "_status": "Status",
+        "_new": "New catalog",
+        "_steps": "Steps",
+        "_general": "General",
+        "_general_info": "Catalog's general information",
+        "_actions": "Actions",
+        "_type": "Type",
+        "_preview": "Preview",
+        "_show_preview": "Show preview",
+        "_name": "Name",
+        "_description": "Description",
+        "_next": "Next",
+        "_summary": "Catalog's summary",
+        "_finish": "Finish"
+    },
+    "UPDATE_CATALOG": {
+        "_back": "Back",
+        "_create": "Update catalog",
+        "_status": "Status",
+        "_update": "Update catalog",
+        "_steps": "Steps",
+        "_general": "General",
+        "_general_info": "Catalog's general information",
+        "_actions": "Actions",
+        "_type": "Type",
+        "_preview": "Preview",
+        "_show_preview": "Show preview",
+        "_name": "Name",
+        "_description": "Description",
+        "_next": "Next",
+        "_summary": "Catalog's summary",
+        "_finish": "Finish"
+    },
     "CREATE_PROD_SPEC":{
         "_back": "Back",
         "_create": "Create product specification",
