--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,8 +2,8 @@
     "_yes": "Yes",
     "_no": "No",    
     "DASHBOARD": {
-        "_title": "DOME MARKETPLACE is out! See what's new",
-        "_header": "DOME Marketplace: Cloud & Edge Services you can Trust",
+        "_title": "YUMKET is out! See what's new",
+        "_header": "YUMKET: Cloud & Edge Services you can Trust",
         "_subheader": "Welcome to the first open distributed marketplace ecosystem for cloud, edge & AI services in Europe.",
         "_new": "New",
         "_learn_more": "Learn more",
