--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -68,7 +68,7 @@
     },
     "HOWITWORKS":{
         "_title": "How It Works",
-        "_subtitle": "Discover how the DOME Marketplace connects you to Europe's finest cloud and edge services",
+        "_subtitle": "Discover how YUMKET connects you to Europe's finest cloud and edge services",
         "CUSTOMERS":{
             "_title": "For customers",
             "_subtitle": "Discover",
